@@ -596,6 +596,8 @@ extern ZORBA_DLL_PUBLIC ZorbaErrorCode ZDDY0018_NODES_NOT_IN_SAME_COLLECTION;
 
 extern ZORBA_DLL_PUBLIC ZorbaErrorCode ZDDY0020_INDEX_DOMAIN_NODE_NOT_IN_COLLECTION;
 
+extern ZORBA_DLL_PUBLIC ZorbaErrorCode ZDDY0019_COLLECTION_ITERATOR_NOT_OPEN;
+
 extern ZORBA_DLL_PUBLIC ZorbaErrorCode ZDDY0021_INDEX_NOT_DECLARED;
 
 extern ZORBA_DLL_PUBLIC ZorbaErrorCode ZDDY0022_INDEX_ALREADY_EXISTS;
