@@ -478,6 +478,10 @@ declare variable $zerr:ZDDY0020 as xs:QName := fn:QName($zerr:NS, "zerr:ZDDY0020
 
 (:~
 :)
+declare variable $zerr:ZDDY0019 as xs:QName := fn:QName($zerr:NS, "zerr:ZDDY0019");
+
+(:~
+:)
 declare variable $zerr:ZDDY0021 as xs:QName := fn:QName($zerr:NS, "zerr:ZDDY0021");
 
 (:~
