@@ -873,6 +873,9 @@ ZorbaErrorCode ZDDY0018_NODES_NOT_IN_SAME_COLLECTION( "ZDDY0018" );
 ZorbaErrorCode ZDDY0020_INDEX_DOMAIN_NODE_NOT_IN_COLLECTION( "ZDDY0020" );
 
 
+ZorbaErrorCode ZDDY0019_COLLECTION_ITERATOR_NOT_OPEN( "ZDDY0019" );
+
+
 ZorbaErrorCode ZDDY0021_INDEX_NOT_DECLARED( "ZDDY0021" );
 
 
