@@ -609,10 +609,12 @@ SimpleCollection::CollectionIter::~CollectionIter()
     theCollection->theLatch.unlock();)
 }
 
+
 void SimpleCollection::CollectionIter::skip()
 {
   // skip by position
   long lToSkip = to_xs_long(theSkip);
+
   if (theSkip >= theCollection->size())
   {
     // we need to skip more then possible -> jump to the end
@@ -646,8 +648,8 @@ bool SimpleCollection::CollectionIter::next(store::Item_t& result)
 {
   if (!theHaveLock) 
   {
-    throw ZORBA_EXCEPTION(zerr::ZXQP0001_DYNAMIC_RUNTIME_ERROR,
-    ERROR_PARAMS(ZED(CollectionIteratorNotOpen)));
+    throw ZORBA_EXCEPTION(zerr::ZDDY0019_COLLECTION_ITERATOR_NOT_OPEN,
+    ERROR_PARAMS(theCollection->getName()->getStringValue()));
   }
 
   if (theIterator == theEnd) 
